# htrflow_app

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  EXPORT_TAB_FIX.md  LICENSE  Makefile  README.md  app.py  dockerfile  pyproject.toml  requirements.txt  test_api.ipynb  test_viewer.html  test_viewer_osd.html  todo.txt  translation.yaml
.claude/skills/htr-transcription/: SKILL.md
.docker/: .dockerignore  dockerfile
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: sync_to_hub.yml  sync_to_riksarkivet_repo.yml
app/: app.py  gradio_config.py  htr_tool.py  i18n_config.py  main.py  mcp_tools.py  pipelines.py  plot_viewer.py  translation.yaml  translations.yaml
app/assets/: examples.py
app/assets/jinja-templates/: image  transcription
app/assets/templates/: 1_simple.yaml  2_nested.yaml  c_nested_labels.yaml  c_nested_reading_order.yaml  c_nested_with_filter.yaml  c_simple_gensettings.yaml  c_simple_multi_output.yaml  nested.yaml  nested_swe_ra.yaml  simple_eng_modern.yaml  simple_medival.yaml  simple_nordhand.yaml  simple_pylaia_french.yaml  simple_swe_ra.yaml
app/content/: how_it_works.md  main_sub_title.md  main_sub_title_hum.md  main_sub_title_ra.md  main_title.md  sidebar.md
app/content/ENG/changelog_roadmap/: changelog.md
app/content/ENG/duplicate_api/: api_code1.md  api_code2.md  duplicate.md
app/content/ENG/faq_discussion/: discussion.md
app/content/ENG/htrflow/: htrflow_tab3.md  htrflow_tab4.md
app/content/NOR/htrflow/: htrflow_col1.md
app/content/SWE/htrflow/: htrflow_col2.md
app/content/en/: sidebar.md
app/content/sv/: sidebar.md
app/helper/: gradio_config.py
app/helper/examples/: create_examples.py
app/helper/text/: text_riksarkivet.py
app/tabs/: adv_htrflow_tab.py  data_explorer_tab copy.py  data_explorer_tab.py  examples_tab.py  export.py  htrflow_tab.py  overview_tab.py  submit.py  templating.py  visualizer.py  visualizer.pyi  visualizer_v2.py  visualizer_v3.py  visualizer_v3.pyi
app/tabs/visualizer/: generate_viewer_template.html  template.html  visualizer.css  visualizer.js
app/templates/: steps_template.yaml.j2
app/texts_langs/: text_app.py  text_overview.py
app/texts_langs/overview/faq_discussion/: faq.md
app/texts_langs/overview/htrflow/: htrflow_col1.md  htrflow_row1.md  htrflow_tab2.md
app/utils/: lang_helper.py  md_helper.py  yaml_helper.py
helper/: gradio_config.py  utils.py
helper/examples/: create_examples.py  examples.py
helper/text/: __init__.py  docs_strucutre.md  markdown_reader.py  text_about.py  text_app.py  text_help.py  text_howto.py  text_overview.py  text_riksarkivet.py  text_roadmap.py
helper/text/about/changelog_roadmap/: old_changelog.md  roadmap.md
helper/text/about/htrflow/: htrflow_tab2.md  htrflow_tab4.md
helper/text/help/: faq.md
helper/text/help/faq_discussion/: faq.md
helper/text/overview/changelog_roadmap/: changelog.md  old_changelog.md  roadmap.md
helper/text/overview/contributions/: contributions.md  huminfra_image.md  riksarkivet_image.md
helper/text/overview/duplicate_api/: api1.md  api2.md  api_code1.md  duplicate.md
helper/text/overview/faq_discussion/: discussion.md  faq.md
helper/text/overview/htrflow/: htrflow_col1.md  htrflow_col2.md  htrflow_tab1.md  htrflow_tab3.md
models/RmtDet_lines/: rtmdet_m_textlines_2_concat.py
models/RmtDet_regions/: rtmdet_m_textregions_2_concat.py
models/SATRN/: _base_satrn_shallow_concat.py  dict1700.txt
notebooks/: demo_api.ipynb
src/htr_pipeline/: gradio_backend.py  inferencer.py  models.py  pipeline.py
src/htr_pipeline/utils/: filter_segmask.py  helper.py  order_of_object.py  parser_xml.py  pipeline_inferencer.py  preprocess_img.py  process_segmask.py  process_xml.py  visualize_xml.py  xml_helper.py
src/htr_pipeline/utils/templates/: page_xml_2013.xml
tabs/: about_tab.py  help_tab.py  htr_tool.py  overview_tab.py  stepwise_htr_tool.py
