[project]
name = "htrflow-app"
version = "1.0.0"
description = "htrflow-app is developed at Riksarkivet's AI-lab as a poc frontend to showcase HTRflow"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{email = "ai@riksarkivet.se"}]
keywords = ["htr", "HTRflow", "ocr", "htrflow-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch==2.0.1",
    "htrflow==0.1.3",
    "gradio[oauth]>=5.11.0",
    "datasets>=3.2.0",
    "pandas>=2.2.3",
    "jinja2>=3.1.4",
    "gradio-modal>=0.0.4",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Riksarkivet/htr_demo"
Repository = "https://github.com/AI-Riksarkivet/htrflow-app"

[tool.uv]
dev-dependencies = [
    "pytest >=8.0.1",
    "python-dotenv >=1.0.1",
    "ruff >=0.6.2",
    "uv>=0.4.12",
]

[project.optional-dependencies]
openmmlab = [
    "openmim==0.3.9",
    "mmengine==0.7.4",
    "mmcv==2.0.1",
    "mmdet==3.0.0",
    "mmocr==1.0.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true  

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-v"
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
ignore = ["C901", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
