[project]
name = "htrflow-app"
version = "1.0.0"
description = "htrflow-app is developed at Riksarkivet's AI-lab as a poc frontend to showcase HTRflow"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{email = "ai@riksarkivet.se"}]
keywords = ["htr", "HTRflow", "ocr", "htrflow-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10,<3.13"

dependencies = [
    "htrflow==0.2.5",
    "gradio>=5.16.1",
    "tqdm>=4.67.1",
    "gradio-modal>=0.0.4",
    "dill>=0.3.9",
    "pylaia>=1.1.2",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Riksarkivet/htr_demo"
Repository = "https://github.com/AI-Riksarkivet/htrflow-app"

[tool.uv]
dev-dependencies = [
    "python-dotenv >=1.0.1",
    "ruff >=0.6.2",
    "uv>=0.4.12",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true  

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-v"
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
ignore = ["C901", "E741", "W605", "E501"]
select = ["C", "E", "F", "I", "W"]
