[project]
name = "htrflow-app"
version = "1.0.1"
description = "htrflow-app is developed at Riksarkivet's AI-lab as a poc frontend to showcase HTRflow"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{email = "ai@riksarkivet.se"}]
keywords = ["htr", "HTRflow", "ocr", "htrflow-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"

dependencies = [
    "htrflow @ git+https://github.com/AI-Riksarkivet/htrflow.git@c9a21db6daaa2b3f915d6c53ee77e78656c68f96",
    "gradio[mcp]>=6.5.0",
    "tqdm>=4.67.1",
    "dill>=0.3.9",
    "spaces>=0.32.0",
    "pycurl==7.45.6",
    "pymupdf>=1.25.3",
    "pagexml-tools>=0.8.1",
    "transformers>=4.30.0,<5.0.0",
    "gradio-i18n>=0.3.4",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Riksarkivet/htr_demo"
Repository = "https://github.com/AI-Riksarkivet/htrflow-app"


[dependency-groups]
dev = [
  "ruff",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
